other/restrict-deprecated-registry/.chainsaw-test/pod-bad.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  containers:
  - name: busybox
    image: k8s.gcr.io/busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
spec:
  containers:
  - name: busybox
    image: busybox:1.35
  - name: busybox02
    image: docker.io/busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
spec:
  containers:
  - name: busybox
    image: k8s.gcr.io/busybox:1.35
  - name: busybox02
    image: docker.io/busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod04
spec:
  containers:
  - name: busybox
    image: registry.k8s.io/busybox:1.35
  - name: busybox02
    image: k8s.gcr.io/busybox:1.35
