other/restrict-deprecated-registry/.chainsaw-test/pod-good.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
  namespace: dep-registry-ns
spec:
  containers:
  - name: busybox
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
  namespace: dep-registry-ns
spec:
  containers:
  - name: busybox
    image: busybox:1.35
  - name: busybox02
    image: docker.io/busybox:1.35
