other/restrict-deprecated-registry/.chainsaw-test/podcontroller-bad.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment01
  namespace: dep-registry-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      foo: bar
  template:
    metadata:
      labels:
        foo: bar
    spec:
      containers:
      - name: busybox
        image: k8s.gcr.io/busybox:1.35
      - name: busybox02
        image: docker.io/busybox:1.35
